täiendasin kristjani koodiga create oma
