# marble-races-api/controllers/CompetitionsController.js
@@ -10,7 +10,7 @@ exports.getById = async (req,res)=> {
     const competitions = await Competition.findByPk(req.params.id)
 
     if (competitions == null) {
-        res.status(404).send({"error":"Not Found"})
+        res.status(404).send({"error":"Competition not Found"})
         return;
     }
     
@@ -18,6 +18,27 @@ exports.getById = async (req,res)=> {
 }
 
 exports.createNew = async (req, res) => {
-    console.log(req.body)
-    res.send(req.body)
+    let competition 
+    try {
+        competition = await Competition.create(req.body)
+    } catch (error) {
+        if (error instanceof db.Sequelize.ValidationError) {
+            res.status(400).send({"error": error.errors.map((item) => item.message)})
+        } else {
+            console.log("CompetitionsCreate: ",error)
+            res.status(500).send({"error":"Something went wrong on our side. Sorry :("})
+        }
+        return
+    }
+    res 
+        .status(201)
+        .location(`${getBaseUrl(req)}/competitions/${competition.id}`)
+        .json(competition)
+}
+
+getBaseUrl = (request) => {
+    return (
+        (request.connection && request.connection.encrypted ? "https" : "http") +
+        `://${request.headers.host}`
+    )
 }
