# marble-races-api/docs/swagger.json
@@ -9,39 +9,6 @@
         "description": "### This is a Swagger UI for our Marble Race API  \n\n### Error handling\nErrors are presented using the HTTP status codes 400-599. The response include a more detailed explanation about the error in the body.\n\n```\n{\n  \"error\": \"Cleartext explanation of the error that occurred\"\n}\n```\n\n### Generic API errors\nThese error responses can be returned by any of the described endpoints.\n\n| HTTP status  |  Description |\n|---|---|\n| 400| Bad input parameters or invalid request. More information can be found in the response body.\n| 401| The consumer does not have access to the requested resource or the provided token is not valid.\n| 404| The requested resource can not be found or the user does not have access to the resource.\n| 5XX| A server error has occurred while processing the request."
     },
     "paths": {
-        "/marbles": {
-            "get": {
-                "tags": [
-                    "marbles"
-                ],
-                "responses": {
-                    "200": {
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "array",
-                                    "items": {
-                                        "type": "string"
-                                    }
-                                },
-                                "examples": {
-                                    "List of teams": {
-                                        "value": [
-                                            "Mellow Yellow",
-                                            "Thunderbolts"
-                                        ]
-                                    }
-                                }
-                            }
-                        },
-                        "description": "Returns a list of teams"
-                    }
-                },
-                "summary": "Get a list of teams",
-                "description": "Returns a list of teams in API"
-            }
-        },
-
         "/competitions": {
             "get": {
                 "tags": [
@@ -72,11 +39,74 @@
                 "description": "Returns a list of all competitions in API"
             },
             "post": {
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/Competition"	
+                            }
+                        }
+                    },
+                    "required": true
+                },
                 "tags": [
                     "competitions"
                 ],
                 "responses": {
                     "201": {
+                        "headers": {
+                            "location": {
+                                "schema": {
+                                    "type": "string"
+                                },
+                                "examples": {
+                                    "Location of created competition": {
+                                        "value": "https://server:port/competitions/{id}"
+                                    }
+                                }
+                            }
+                        },
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Competition"
+                                }
+                            }
+                        },
+                        "description": "Competition was added"
+                    },
+                    "400": {
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/error"
+                                },
+                                "examples": {
+                                    "Invalid data": {
+                                        "value": {
+                                            "error": "Invalid input, missing required parameters"
+                                        }
+                                    }
+                                }
+                            }
+                        },
+                        "description": "Invalid data supplied"
+                    }
+                },
+                "operationId": "#184268298",
+                "summary": "Add new competition",
+                "description": "Add new competition with all the details\n"
+            }
+        },
+        "/competitions/{id}": {
+            "summary": "Get competition Details",
+            "description": "Get all the details of a competition with the given id",
+            "get": {
+                "tags": [
+                    "competitions"
+                ],
+                "responses": {
+                    "200": {
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -86,21 +116,124 @@
                                     }
                                 },
                                 "examples": {
-                                    "Example of entry": {
+                                    "Full details of a competition": {
                                         "value": [
-                                            "Comp name",
-                                            "Comp date"
+                                            2324234,
+                                            "Meistrivõistlus",
+                                            "20.04.2023",
+                                            "Slaalom",
+                                            5,
+                                            "jama",
+                                            "Tartu",
+                                            "Bossworm"
                                         ]
                                     }
                                 }
                             }
                         },
-                        "description": "Creates new entry with entered variables"
+                        "description": "Competition was found and the details are returned"
+                    },
+                    "404": {
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/error"
+                                },
+                                "examples": {
+                                    "Game not found": {
+                                        "value": {
+                                            "error": "Competition with the given id was not found."
+                                        }
+                                    }
+                                }
+                            }
+                        },
+                        "description": "Competition with the given ID does not exist"
                     }
                 },
-                "operationId": "#184268298",
-                "summary": "Add competitions and add info on lines for competitions",
-                "description": "Create new competition, add variables\n"
+                "operationId": "#184268001",
+                "summary": "Get full details of the competition with given ID",
+                "description": "Return all the details of the competition\n"
+            },
+            "parameters": [
+                {
+                    "name": "id",
+                    "description": "Id of the Competition to get the details",
+                    "schema": {
+                        "type": "integer"
+                    },
+                    "in": "path",
+                    "required": true
+                }
+            ]
+        }
+    },
+    "components": {
+        "schemas": {
+            "error": {
+                "title": "Root Type for error",
+                "description": "",
+                "type": "object",
+                "properties": {
+                    "error": {
+                        "type": "string"
+                    }
+                },
+                "example": {
+                    "error": "Error message."
+                }
+            },
+            "Competition": {
+                "title": "Root Type for Competition",
+                "description": "Competition details",
+                "required": [
+                    "competitionName",
+                    "date",
+                    "trackType",
+                    "numberOfteams",
+                    "registeredTeams",
+                    "location",
+                    "organizer"
+                ],
+                "type": "object",
+                "properties": {
+                    "id": {
+                        "format": "int32",
+                        "type": "integer"
+                    },
+                    "competitionName": {
+                        "type": "string"
+                    },
+                    "date": {
+                        "format": "date",
+                        "type": "string"
+                    },
+                    "trackType": {
+                        "type": "string"
+                    },
+                    "numberOfTeams": {
+                        "type": "integer"
+                    },
+                    "registeredTeams": {
+                        "type": "string"
+                    },
+                    "location": {
+                        "type": "string"
+                    },
+                    "organizer": {
+                        "type": "string"
+                    }
+                },
+                "example": {
+                    "id": 234324,
+                    "competitionName": "Meistrivõistlus",
+                    "date": "20.04.2023 :)",
+                    "trackType": "Slaalom",
+                    "numberOfTeams": 5,
+                    "registeredTeams": "jama",
+                    "location": "Tartu",
+                    "organizer": "Bossworm"
+                }
             }
         }
     }
